test/src/e2e_vm_tests/test_programs/should_fail/storage_invalid_storage_key_type/src/main.sw
contract;

fn get_u256() -> u256 {
    0x0u256
}

storage {
    field in get_u256(): u64 = 0,
}